<resources>
    <string name="app_name">AnteiaSDK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting_message">¡Hola!</string>
    <string name="its_very_simple">Es MUY sencillo</string>

    <string name="intro_message">Te daremos unos consejos para que el registro sea exitoso</string>
    <string name="good_light">Sólo ubícate \nen un ambiente \ncon buena luz</string>
    <string name="have_your_id_card_at_hand">Ten a mano \ntu documento de \nidentidad</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="complete_fields_message">Ingresa los siguientes datos:</string>
    <string name="phone">CELULAR</string>
    <string name="lastname">APELLIDO</string>
    <string name="dni">DOCUMENTO</string>
    <string name="next">Siguiente</string>
    <string name="email">CORREO</string>
    <string name="welcome">Bienvenido</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="identity">Identidad \nConsultar la identidad y estado del dispositivo</string>
    <string name="location">Ubicaciòn \nAcceder a tu ubicación aproximada</string>
    <string name="camera">Cámara.  \nRelizar fotografìas y videos</string>
    <string name="mic">Micròfono. \nGrabar sonido</string>
    <string name="fingerprint">Identidad \nReconocimiento facial y datos biométricos</string>

    <string name="tos">Doy mi consentimiento libre, expreso que he sido informado de los términos y condiciones, política de privacidad y tratamiento de datos sensibles. (leer más)</string>

    <string name="welcome_first_text">¡La forma más segura para proteger tu inversión y  que nadie te suplante es el video!</string>
    <string name="welcome_second_text">Tenga en cuenta que se le va a solicitar autorizar una serie de accesos  para hacer la vinculación, si no acepas alguno no podrás continuar con el proceso por temas regulatorios.</string>

    <string name="check_your_email">REVISA TU CORREO</string>
    <string name="lets_verify_your_email">Ahora verifiquemos \ntu correo</string>
    <string name="activation">CONFIRMA TU \nCELULAR</string>
    <string name="enter_the_code">Ingresa el código de seguridad \nque te hemos enviado a \n%1$s</string>

    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="country">País</string>
    <string name="department">Departamento</string>

    <string name="time_to_check_your_address">Es momento de verificar tu ubicación</string>

    <string name="check_for_email">Confirma el mensaje \nque te hemos \nenviado a tu correo \electrónico</string>
    <string name="accept">Aceptar</string>
    <string name="check_for_spam">Si por algún motivo no está el correo en tu bandeja de entrada revisa la carpeta de spam</string>
    <string name="start">Comencemos</string>
    <string name="resend_email"><u>RE-ENVIAR CORREO</u></string>
    <string name="resend_sms"><u>Reenviar SMS</u></string>
    <string name="code">Código</string>

    <string name="change_address"><u>Ajustar dirección</u></string>

    <string name="change_your_address">Ajustar tu dirección</string>
    <string name="create_your_password">Crea tu contraseña</string>

    <string name="modify_email_header">Ingresa tu correo</string>

    <string name="password_instructions">Usa minimo 8 carácteres \ncombinando mayúsculas, minúsculas, \nnúmeros, un cáracter especial (!?@#$%&amp;)</string>

    <string name="confirm_password">Confirmar contraseña</string>

    <string name="password">Contraseña</string>

    <string name="confirm_email">CONFIRMAR CORREO</string>
    <string name="confirm_sms">CONFIRMAR NÚMERO</string>

    <string name="_continue">CONTINUAR</string>
    <string name="confirm">CONFIRMAR</string>

    <string name="confirm_address">CONFIRMAR DIRECCIÓN</string>

    <string name="modify_email">Modificar Correo</string>
    <string name="modify_phone">Modificar Número</string>
    <string name="enter_your_phone">Ingresa tu celular</string>

    <string name="resend_otp">RE-ENVIAR SMS</string>

    <string name="show_your_id">UBICA TU DOCUMENTO \nDE IDENTIDAD \nEN EL RECUADRO COMPLETO</string>
    <string name="front_first">PRIMERO EL FRENTE</string>
    <string name="capturing">CAPTURANDO</string>

    <string name="now_back">Ahora el reverso</string>
    <string name="inside_the_square">Dentro del recuadro \ncompleto</string>
    <string name="show_your_face">Mira \ntu cámara \nfijamente</string>

    <string name="wait_a_moment">Espera un momento</string>


    <string name="reject">Rechazar</string>


</resources>