<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:padding="@dimen/outter_layout_padding"
        android:layout_height="match_parent"
        tools:context=".ui.dataentry.DataEntryFragment">
        <TextView
            android:id="@+id/header_title"
            android:layout_above="@id/check_your_email_tv"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lets_verify_your_email"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            />
        <ImageView
            android:id="@+id/icon_view"
            android:layout_width="90dp"
            android:layout_height="81dp"
            android:layout_above="@id/check_email_folder_tv"
            android:src="@drawable/email"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_above="@id/icon_view"
            android:id="@+id/check_your_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"

            android:layout_marginBottom="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/check_your_email" />

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/check_email_folder_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/check_for_email" />
        <TextView
            android:id="@+id/check_for_spam_tv"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_for_spam"
            android:layout_below="@id/check_email_folder_tv"
            android:gravity="center_horizontal"
            android:textColor="@color/gray" />
        <Button
            android:layout_marginTop="16dp"
            app:backgroundTint="@null"
            android:layout_width="wrap_content"
            android:layout_below="@id/check_for_spam_tv"
            android:text="@string/modify_email"
            android:id="@+id/modify_email_button"

            android:layout_centerHorizontal="true"
            android:background="@drawable/secondary_button_background"
            android:textColor="@color/gray"
            android:layout_height="@dimen/buttons_height"/>


            <RelativeLayout
                android:id="@+id/email_linear_layout"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:layout_height="wrap_content">
                <com.google.android.material.button.MaterialButton
                    android:layout_marginBottom="16dp"
                    android:id="@+id/next_button"
                    android:layout_width="wrap_content"
                    android:text="@string/confirm_email"
                    android:paddingLeft="@dimen/buttons_padding"
                    android:paddingRight="@dimen/buttons_padding"
                    android:layout_centerHorizontal="true"
                    android:layout_above="@id/resend_email_tv"
                    app:backgroundTint="@null"
                    android:background="@drawable/rounded_button"
                    android:textColor="@color/white"
                    android:layout_marginEnd="16dp"
                    android:layout_height="@dimen/buttons_height"/>

                <TextView
                    android:id="@+id/resend_email_tv"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:text="@string/resend_email"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:visibility="invisible"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="40dp"
            app:lottie_rawRes="@raw/loading_spinner"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>



    </RelativeLayout>
</layout>