<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="co.anteia.anteiasdk.viewModel.CreatePasswordViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/background"
        android:padding="@dimen/outter_layout_padding"
        android:layout_height="match_parent"
        tools:context=".ui.dataentry.DataEntryFragment">

        <TextView
            android:layout_above="@id/input_data_linear_layout"
            android:id="@+id/create_your_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:text="@string/create_your_password" />


        <LinearLayout
            android:id="@+id/input_data_linear_layout"
            android:layout_marginTop="16dp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:errorEnabled="true"
                app:error="@{viewModel.errorPassword}"
                app:boxBackgroundColor="@null"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/white"
                app:endIconTint="@color/gray"
                app:errorIconDrawable="@null"
                android:textColorHint="@color/white"
                style="@style/OutlinedRoundedBox"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:id="@+id/password_tv"
                android:text="@={viewModel.password}"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginBottom="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/password_confirm_tv"
                app:errorEnabled="true"
                app:error="@{viewModel.errorPasswordConfirm}"
                app:passwordToggleEnabled="true"
                app:hintTextColor="@color/white"
                app:errorIconDrawable="@null"
                app:passwordToggleTint="@android:color/darker_gray"
                android:textColorHint="@color/white"
                style="@style/OutlinedRoundedBox"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:hint="@string/confirm_password"
                android:textColor="@color/white"
                android:text="@={viewModel.passwordConfirm}"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/input_data_message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/gray"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:text="@string/password_instructions" />
        </LinearLayout>
        <com.google.android.material.button.MaterialButton
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/confirm"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            android:paddingLeft="@dimen/buttons_padding"
            android:paddingRight="@dimen/buttons_padding"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttons_height"
            android:enabled="@{viewModel.valid}"
            android:id="@+id/next_button"
            android:background="@drawable/rounded_button" />


    </RelativeLayout>
</layout>