<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="co.anteia.anteiasdk.viewModel.ModifyPhoneViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="@dimen/outter_layout_padding"
        tools:context=".ui.confirmphone.ModifyPhoneFragment">

        <TextView
            android:id="@+id/modify_email_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_above="@id/modify_phone_layout"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:text="@string/enter_your_phone"
            android:textSize="22sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            app:boxBackgroundColor="@null"
            app:hintTextColor="@color/white"
            android:id="@+id/modify_phone_layout"
            android:textColorHint="@color/white"
            style="@style/OutlinedRoundedBox"
            app:error="@{viewModel.errorPhone}"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/phone"
                android:inputType="phone"
                android:text="@={viewModel.phone}" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttons_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/buttons_padding"
            android:paddingRight="@dimen/buttons_padding"
            app:backgroundTint="@null"
            android:background="@drawable/button_background"
            android:enabled="@{viewModel.valid}"
            android:text="@string/next"
            android:textColor="@color/white" />
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:visibility="invisible"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            app:lottie_rawRes="@raw/loading_spinner"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

    </RelativeLayout>
</layout>