<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="co.anteia.anteiasdk.viewModel.ModifyEmailViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:padding="@dimen/outter_layout_padding"
        tools:context=".ui.confirmemail.ModifyEmailFragment">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="81dp"
            android:src="@drawable/email"
            android:layout_above="@id/modify_email_header_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            />
        <TextView
            android:layout_above="@id/modify_email_et"
            android:id="@+id/modify_email_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:textColor="@color/white"
            android:text="@string/modify_email_header"
            android:textSize="22sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/modify_email_et"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_centerInParent="true"
            app:boxBackgroundColor="@null"
            app:hintTextColor="@color/white"
            android:textColorHint="@color/white"
            style="@style/OutlinedRoundedBox"
            app:error="@{viewModel.errorEmail}"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:textColor="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:visibility="invisible"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            app:lottie_rawRes="@raw/loading_spinner"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            app:backgroundTint="@null"
            android:background="@drawable/rounded_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/buttons_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/buttons_padding"
            android:paddingRight="@dimen/buttons_padding"
            android:text="@string/next"
            android:enabled="@{viewModel.valid}"
            android:textColor="@color/white" />


    </RelativeLayout>
</layout>